tests/e2e/fail/str_new_removed.ep
# COMPILE_ERROR: unknown function 'str_new'
fun main(): void {
    str_new(cstr("abc"), 3)
}
